--- a/EpicAnchors-Plugin/src/main/resources/en_US.lang
+++ b/EpicAnchors-Plugin/src/main/resources/en_US.lang
@@ -7,6 +7,10 @@ general.nametag.nameformat = "&eLevel %level% &fFurnace"
 
 #Interface Messages
 
+interface.button.addtimewithxp = "&aAdd 30 Minutes with XP"
+interface.button.addtimewithxplore = "&7Cost: &a%cost% Levels"
+interface.button.addtimewitheconomy = "&aAdd 30 Minutes with ECO"
+interface.button.addtimewitheconomylore = "&7Cost: &a$%cost%"
 interface.anchor.title = "ChunkAnchor";
 interface.anchor.smalltitle = "&eChunkAnchor";
 
